--- a/Frontend/MovieSite.WebUI/Views/Movie/MovieList.cshtml
+++ b/Frontend/MovieSite.WebUI/Views/Movie/MovieList.cshtml
@@ -106,11 +106,11 @@
 									<div class="group-ip">
 										<select name="skills" multiple="" class="ui fluid dropdown">
 											<option value="">Enter to filter genres</option>
-											<option value="Action1">Action 1</option>
-											<option value="Action2">Action 2</option>
-											<option value="Action3">Action 3</option>
-											<option value="Action4">Action 4</option>
-											<option value="Action5">Action 5</option>
+											<option value="Action1">Action</option>
+											<option value="Action2">Adventure</option>
+											<option value="Action3">Animation</option>
+											<option value="Action4">Horror</option>
+											<option value="Action5">Comedy</option>
 										</select>
 									</div>
 
@@ -120,9 +120,10 @@
 
 									<select>
 										<option value="range">-- Select the rating range below --</option>
-										<option value="saab">-- Select the rating range below --</option>
-										<option value="saab">-- Select the rating range below --</option>
-										<option value="saab">-- Select the rating range below --</option>
+										<option value="saab">-- 8 and above --</option>
+										<option value="saab">-- between 7 and 8 --</option>
+										<option value="saab">-- between 5 and 7 --</option>
+										<option value="saab">-- less than 5 --</option>
 									</select>
 
 								</div>
@@ -131,30 +132,30 @@
 									<div class="row">
 										<div class="col-md-6">
 											<select>
-												<option value="range">From</option>
-												<option value="number">10</option>
-												<option value="number">20</option>
-												<option value="number">30</option>
+												<option value="range">Select a year</option>
+												<option value="number">2000</option>
+												<option value="number">2010</option>
+												<option value="number">2020</option>
 											</select>
 										</div>
 										<div class="col-md-6">
 											<select>
-												<option value="range">To</option>
-												<option value="number">20</option>
-												<option value="number">30</option>
-												<option value="number">40</option>
+												<option value="range">Select a year</option>
+												<option value="number">2000</option>
+												<option value="number">2010</option>
+												<option value="number">2020</option>
 											</select>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-12 ">
-									<input class="submit" type="submit" value="submit">
+									<input class="submit" type="submit" value="Search a movie">
 								</div>
 							</div>
 						</form>
 					</div>
 					<div class="ads">
-						<img src="images/uploads/ads1.png" alt="">
+						<img src="/Film-Review-Movie-Database/images/uploads/ads1.png" alt="">
 					</div>
 					<div class="sb-facebook sb-it">
 						<h4 class="sb-title">Find us on Facebook</h4>
